tests/baselines/reference/unusedImports2.errors.txt
tests/cases/compiler/file2.ts(2,1): error TS6133: 'test' is declared but its value is never read.


==== tests/cases/compiler/file1.ts (0 errors) ====
    export class Calculator {
        handleChar() {}
    }
    
    export function test() {
    
    }
    
==== tests/cases/compiler/file2.ts (1 errors) ====
    import {Calculator} from "./file1"
    import {test} from "./file1"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'test' is declared but its value is never read.
    
    var x = new Calculator();
    x.handleChar();